test-legacy/tests/language/expr/escape/basic/out_of_range.txt
error: unicode codepoint out of range
 --> tests/language/expr/escape/basic/out_of_range.tql:6:7
  |
6 |   x: "\u{FFFFFF}",
  |       ^^^^^^^^^^ 
  |
